# nnue-cpp-trainer

./: .gitignore  readme.md
src/: CMakeLists.txt  Makefile.loader  featrans_kernel.cu  featrans_kernel.cuh  feature_set.cpp  feature_set.h  feature_transformer.cpp  feature_transformer.h  main.cpp  model.cpp  model.h  my_logger.cpp  my_logger.h  ranger.cpp  ranger.h  run_cmake.sh  serialize.cpp  serialize.h  sparse_batch.cpp  sparse_batch.h  train.cpp  train.h  training_data_loader.cpp  training_data_loader.h
src/tests/: binpack_count.cpp  trainer_test.cpp
